Adding new game button to root page

--- a/lib/v2_order_request_web/live/game_live.html.leex
+++ b/lib/v2_order_request_web/live/game_live.html.leex
@@ -23,7 +23,7 @@
                 <%# <%= checkbox(f, :fulfilled, value: :false) %>
                 <%= text_input f, :assigned_to, placeholder: "Assigned to?" %>
                 <%= text_input f, :requested_by, placeholder: "Requested by?" %>
-                <%= submit "Create" %>
+                <%= submit "💾" %>
             </form>
         </div>
 
