--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -10,6 +10,14 @@
   }
 }
 
+.form {
+  form {
+    display: flex;
+    column-gap: 2rem;
+    margin-left: 2rem;
+  }
+}
+
 #order-header {
   display: flex;
   
