--- a/lib/v2_order_request_web/live/game_live.html.leex
+++ b/lib/v2_order_request_web/live/game_live.html.leex
@@ -17,7 +17,7 @@
 <div id="order-list">
     <%= if @creating_order do %>
         <div class="game-order">
-            <%= f = form_for :order, "#", id: "order-form", phx_submit: :create_new_order %> <%#, phx_change: :form_updated %>
+            <%= f = form_for @changeset, "#", id: "order-form", phx_submit: :create_new_order %> <%#, phx_change: :form_updated %>
                 <%= text_input f, :item, placeholder: "What item?" %>
                 <%= number_input f, :amount, placeholder: "Amount?" %>
                 <%# <%= checkbox(f, :fulfilled, value: :false) %>
