--- a/lib/v2_order_request_web/live/game_live.html.leex
+++ b/lib/v2_order_request_web/live/game_live.html.leex
@@ -2,14 +2,13 @@
     <h2>Viewing orders for <strong><%= @game_name %></strong></h2>
 
     <%= unless @creating_order do %>
-        <button phx-click="new-order"> New order </button>
+        <button phx-click="toggle-create-new-order"> New order </button>
     <% end %>
 </div>
 
 <div class="game-order">
     <div class="label"> <p> Order </p> </div>
     <div class="label"> <p> Amount </p> </div>
-    <%# <div class="label"> Fulfilled </div> %>
     <div class="label"> <p> Assigned to </p> </div>
     <div class="label"> <p> Requested by </p> </div>
 </div>
@@ -17,16 +16,14 @@
 <div id="order-list">
     <%= if @creating_order do %>
         <div class="game-order">
-            <%= f = form_for @changeset, "#", id: "order-form", phx_submit: :create_new_order %> <%#, phx_change: :form_updated %>
+            <%= f = form_for @changeset, "#", id: "order-form", phx_submit: :create_new_order%> <%#, phx_change: :form_updated %>
                 <%= text_input f, :item, placeholder: "What item?" %>
                 <%= number_input f, :amount, placeholder: "Amount?" %>
-                <%# <%= checkbox(f, :fulfilled, value: :false) %>
                 <%= text_input f, :assigned_to, placeholder: "Assigned to?" %>
                 <%= text_input f, :requested_by, placeholder: "Requested by?" %>
                 <%= submit "💾" %>
             </form>
         </div>
-
 
         <button phx-click="cancel"> Cancel </button>
     <% end %>
